--- a/gallery.html
+++ b/gallery.html
@@ -180,11 +180,8 @@ function showSlides(n) {
     slides[i].style.display = "none";
   }
   
-
   //Sets the current Index to be active and displayed to the user
   slides[slideIndex-1].style.display = "block";
-  
-
   
   showThumbnails()
 }
@@ -229,26 +226,26 @@ function showThumbnails() {
 <!-- Container for the image gallery -->
 <div class="container">
   <!-- Full-width images with number text -->
-  <div class="mySlides"><div class="numbertext">1</div><img src="https://i.imgur.com/WrJxcMz.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">2</div><img src="https://i.imgur.com/8r9OQeo.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">3</div><img src="https://i.imgur.com/aBiZJHu.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">4</div><img src="https://i.imgur.com/2g9goNK.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">5</div><img src="https://i.imgur.com/UcdS77g.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">6</div><img src="https://i.imgur.com/Vb9wKQR.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">7</div><img src="https://i.imgur.com/zibMN0I.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">8</div><img src="https://i.imgur.com/B2jqGBt.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">9</div><img src="https://i.imgur.com/PqzqW7B.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">10</div><img src="https://i.imgur.com/WnaB0Ep.png" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">11</div><img src="https://i.imgur.com/AVSzw3g.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">12</div><img src="https://i.imgur.com/tCXJDOt.png" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">13</div><img src="https://i.imgur.com/5eaf4Uy.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">14</div><img src="https://i.imgur.com/lEr4awH.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">15</div><img src="https://i.imgur.com/sMWtAkG.png" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">16</div><img src="https://i.imgur.com/YYt9uQi.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">17</div><img src="https://i.imgur.com/5AYOze9.png" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">18</div><img src="https://i.imgur.com/xuKk4A8.png" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">19</div><img src="https://i.imgur.com/cBfOvEL.jpg" style="width:100%"></div>
-  <div class="mySlides"><div class="numbertext">20</div><img src="https://i.imgur.com/NcOZKXB.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">1</div><img src="https://join1id.s3.amazonaws.com/1.png" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">2</div><img src="https://join1id.s3.amazonaws.com/2.png" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">3</div><img src="https://join1id.s3.amazonaws.com/3.png" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">4</div><img src="https://join1id.s3.amazonaws.com/4.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">5</div><img src="https://join1id.s3.amazonaws.com/5.png" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">6</div><img src="https://join1id.s3.amazonaws.com/6.png" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">7</div><img src="https://join1id.s3.amazonaws.com/7.png" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">8</div><img src="https://join1id.s3.amazonaws.com/8.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">9</div><img src="https://join1id.s3.amazonaws.com/9.png" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">10</div><img src="https://join1id.s3.amazonaws.com/20200511222039_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">11</div><img src="https://join1id.s3.amazonaws.com/20201031061406_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">12</div><img src="https://join1id.s3.amazonaws.com/20210308201127_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">13</div><img src="https://join1id.s3.amazonaws.com/20210314000151_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">14</div><img src="https://join1id.s3.amazonaws.com/20210416030154_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">15</div><img src="https://join1id.s3.amazonaws.com/20210508044526_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">16</div><img src="https://join1id.s3.amazonaws.com/20210524020049_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">17</div><img src="https://join1id.s3.amazonaws.com/20210622021130_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">18</div><img src="https://join1id.s3.amazonaws.com/20210625023748_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">19</div><img src="https://join1id.s3.amazonaws.com/20210802021327_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">20</div><img src="https://join1id.s3.amazonaws.com/20210827194047_1.jpg" style="width:100%"></div>
 
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -261,26 +258,26 @@ function showThumbnails() {
 
   <!-- Thumbnail images -->
   <div class="row w3-padding-16">
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/WrJxcMz.jpg" style="width:100%" onclick="currentSlide(1)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/8r9OQeo.jpg" style="width:100%" onclick="currentSlide(2)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/aBiZJHu.jpg" style="width:100%" onclick="currentSlide(3)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/2g9goNK.jpg" style="width:100%" onclick="currentSlide(4)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/UcdS77g.jpg" style="width:100%" onclick="currentSlide(5)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/Vb9wKQR.jpg" style="width:100%" onclick="currentSlide(6)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/zibMN0I.jpg" style="width:100%" onclick="currentSlide(7)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/B2jqGBt.jpg" style="width:100%" onclick="currentSlide(8)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/PqzqW7B.jpg" style="width:100%" onclick="currentSlide(9)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/WnaB0Ep.png" style="width:100%" onclick="currentSlide(10)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/AVSzw3g.jpg" style="width:100%" onclick="currentSlide(11)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/tCXJDOt.png" style="width:100%" onclick="currentSlide(12)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/5eaf4Uy.jpg" style="width:100%" onclick="currentSlide(13)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/lEr4awH.jpg" style="width:100%" onclick="currentSlide(14)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/sMWtAkG.png" style="width:100%" onclick="currentSlide(15)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/YYt9uQi.jpg" style="width:100%" onclick="currentSlide(16)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/5AYOze9.png" style="width:100%" onclick="currentSlide(17)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/xuKk4A8.png" style="width:100%" onclick="currentSlide(18)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/cBfOvEL.jpg" style="width:100%" onclick="currentSlide(19)" alt=""></div>
-    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://i.imgur.com/NcOZKXB.jpg" style="width:100%" onclick="currentSlide(20)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/1.png" style="width:100%" onclick="currentSlide(1)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/2.png" style="width:100%" onclick="currentSlide(2)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/3.png" style="width:100%" onclick="currentSlide(3)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/4.jpg" style="width:100%" onclick="currentSlide(4)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/5.png" style="width:100%" onclick="currentSlide(5)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/6.png" style="width:100%" onclick="currentSlide(6)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/7.png" style="width:100%" onclick="currentSlide(7)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/8.jpg" style="width:100%" onclick="currentSlide(8)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/9.png" style="width:100%" onclick="currentSlide(9)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20200511222039_1.jpg" style="width:100%" onclick="currentSlide(10)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20201031061406_1.jpg" style="width:100%" onclick="currentSlide(11)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210308201127_1.jpg" style="width:100%" onclick="currentSlide(12)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210314000151_1.jpg" style="width:100%" onclick="currentSlide(13)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210416030154_1.jpg" style="width:100%" onclick="currentSlide(14)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210508044526_1.jpg" style="width:100%" onclick="currentSlide(15)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210524020049_1.jpg" style="width:100%" onclick="currentSlide(16)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210622021130_1.jpg" style="width:100%" onclick="currentSlide(17)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210625023748_1.jpg" style="width:100%" onclick="currentSlide(18)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210802021327_1.jpg" style="width:100%" onclick="currentSlide(19)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210827194047_1.jpg" style="width:100%" onclick="currentSlide(20)" alt=""></div>
   </div>
   <a class="tb-prev" onclick="plusThumbnails(-5)">&#10094;</a>
   <a class="tb-next" onclick="plusThumbnails(5)">&#10095;</a>
