--- a/serveradmin.html
+++ b/serveradmin.html
@@ -64,7 +64,7 @@ body, html {
   <p><b>AdminForceAllRoleAvailability <i>[0 / 1]</i>:</b> Allows players to choose whichever kit they want.</p>
   <p><b>AdminAlwaysValidPlacement <i>[0 / 1]</i>:</b> Allows deployables to be placed anywhere without any restrictions whatsoever.</p>
   <p><b>AdminNoTeamChangeTimer <i>[0 / 1]</i>:</b> Disable Team change timer.</p>
-  <p><b>AdminNoRespawnTimer <i>[0 / 1]</i>:</b> Disable Team change timer.</p>
+  <p><b>AdminNoRespawnTimer <i>[0 / 1]</i>:</b> Disable Respawn timer.</p>
   <p><b>DebugToggleGodMode:</b> Enables/disabled GodMode.</p>
   <p><b>AdminBroadcast <i>[Message]</i>:</b> Send a message to the entire server. (the yellow messages that shows up in the top center)</p>
   <p><b>AdminWarn <i>[NameOrSteamId] [WarnReason]</i>:</b> Send a warning message to the specified player.</p>
