--- a/serveradmin.html
+++ b/serveradmin.html
@@ -63,6 +63,7 @@ body, html {
   <h3><b><u>General Server Commands:</u></b></h3>
   <p><b>AdminForceAllRoleAvailability <i>[0 / 1]</i>:</b> Allows players to choose whichever kit they want.</p>
   <p><b>AdminAlwaysValidPlacement <i>[0 / 1]</i>:</b> Allows deployables to be placed anywhere without any restrictions whatsoever.</p>
+  <p><b>AdminForceAllDeployableAvailability <i>[0 / 1]</i>:</b> Removes restrictions required to place down deployables.</p>
   <p><b>AdminNoTeamChangeTimer <i>[0 / 1]</i>:</b> Disable Team change timer.</p>
   <p><b>AdminNoRespawnTimer <i>[0 / 1]</i>:</b> Disable Respawn timer.</p>
   <p><b>DebugToggleGodMode:</b> Enables/disabled GodMode.</p>
