--- a/serveradmin.html
+++ b/serveradmin.html
@@ -92,7 +92,7 @@ body, html {
   <p><b>AdminForceAllDeployableAvailability <i>[0 / 1]</i>:</b> Removes restrictions required to place down deployables.</p>
   <p><b>AdminCreateDeployable <i>[DeployableLink]</i>:</b> Spawns in specified deployable at the admins location.</p>
 
-  <h3><b><u>Vehicles Commands:</u></b></h3>
+  <h3><b><u>Vehicle Commands:</u></b></h3>
   <p><b>AdminCreateVehicle <i>[VehicleLink]</i>:</b> Spawns in specified vehicle at the admins location.</p>
   <p><b>AdminDisableVehicleKitRequirement <i>[0 / 1]</i>:</b> Allows players to access vehicles that have kit requirements (Pilot / Crewman vehicles)</p>
   <p><b>AdminDisableVehicleTeamRequirement <i>[0 / 1]</i>:</b> Allows players to access any vehicle, including enemy vehicles.</p>
