--- a/serveradmin.html
+++ b/serveradmin.html
@@ -54,11 +54,15 @@ body, html {
 
 <div class="container">
   <h2><b><u>Useful Server Commands:</u></b></h2>
-  <h6><a href="https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels">https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels</a></h6><br>
 
   <h3><b><u>Hotkeys:</u></b></h3>
-  <p><b>SHIFT + P:</b> Enables AdminCam.</p>
   <p><b>' :</b> Opens the server console.</p><br>
+  <p><b>SHIFT + P:</b> Enables AdminCam.</p>
+  <p><b>1 (and then scroll wheel):</b> Changes your speed while in AdminCam.</p><br>
+  <p><b>2 (and then scroll wheel):</b> Zoom in and out while in AdminCam.</p><br>
+  <p><b>6 :</b> Display the capture zones around each objective in the map while in AdminCam. </p><br>
+  <p><b>9 :</b> Display the player nametags in the map while in AdminCam. </p><br>
+  <p><b>0 :</b> Display the Admin HUD (located in top-left of screen) while in AdminCam. </p><br>
 
   <h3><b><u>General Server Commands:</u></b></h3>
   <p><b>AdminForceAllRoleAvailability <i>[0 / 1]</i>:</b> Allows players to choose whichever kit they want.</p>
@@ -106,6 +110,9 @@ body, html {
 
   <h3><b><u>Need to Test:</u></b></h3>
   <p><b>AdminSetFogOfWar <i>[0 / 1]</i>:</b> Sets the fog of war active in the match.</p>
+
+  <br><br>
+  <h6><a href="https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels">https://squad.fandom.com/wiki/Server_Administration#Admin_Access_Levels</a></h6><br>
   
 
   <br><br><br><br><br>
