--- a/serveradmin.html
+++ b/serveradmin.html
@@ -56,12 +56,12 @@ body, html {
   <h2><b><u>Useful Server Commands:</u></b></h2>
 
   <h3><b><u>Hotkeys:</u></b></h3>
-  <p><b>' :</b> Opens the server console.</p><br>
+  <p><b>' :</b> Opens the server console.</p>
   <p><b>SHIFT + P:</b> Enables AdminCam.</p>
-  <p><b>1 (and then scroll wheel):</b> Changes your speed while in AdminCam.</p><br>
-  <p><b>2 (and then scroll wheel):</b> Zoom in and out while in AdminCam.</p><br>
-  <p><b>6 :</b> Display the capture zones around each objective in the map while in AdminCam. </p><br>
-  <p><b>9 :</b> Display the player nametags in the map while in AdminCam. </p><br>
+  <p><b>1 (and then scroll wheel):</b> Changes your speed while in AdminCam.</p>
+  <p><b>2 (and then scroll wheel):</b> Zoom in and out while in AdminCam.</p>
+  <p><b>6 :</b> Display the capture zones around each objective in the map while in AdminCam. </p>
+  <p><b>9 :</b> Display the player nametags in the map while in AdminCam. </p>
   <p><b>0 :</b> Display the Admin HUD (located in top-left of screen) while in AdminCam. </p><br>
 
   <h3><b><u>General Server Commands:</u></b></h3>
