--- a/serveradmin.html
+++ b/serveradmin.html
@@ -68,8 +68,8 @@ body, html {
   <p><b>AdminForceAllRoleAvailability <i>[0 / 1]</i>:</b> Allows players to choose whichever kit they want.</p>
   <p><b>AdminNoTeamChangeTimer <i>[0 / 1]</i>:</b> Disable Team change timer.</p>
   <p><b>AdminNoRespawnTimer <i>[0 / 1]</i>:</b> Disable Respawn timer.</p>
-  <p><b>DebugToggleGodMode:</b> Enables/disabled GodMode.</p>
-  <p><b>AdminBroadcast <i>[Message]</i>:</b> Send a message to the entire server. (the yellow messages that shows up in the top center)</p>
+  <p><b>DebugToggleGodMode:</b> Toggles GodMode.</p>
+  <p><b>AdminBroadcast <i>[Message]</i>:</b> Send a message to the entire server. (the yellow messages that shows up in the top center of the screen)</p>
   <p><b>AdminWarn <i>[NameOrSteamId] [WarnReason]</i>:</b> Send a warning message to the specified player.</p>
   
 
@@ -84,7 +84,7 @@ body, html {
   
   <h3><b><u>Player-related Commands:</u></b></h3>
   <p><b>AdminDemoteCommander <i>[PlayerName]</i>:</b> Demotes the specified player from the Commander position.</p>
-  <p><b>AdminDisbandSquad <i>[TeamNumber] [SquadIndex]</i>:</b> Disbands the specified squad from the specified team.</p>
+  <p><b>AdminDisbandSquad <i>[TeamNumber] [SquadIndex]</i>:</b> Disbands the specified squad from the specified team. While in scoreboard: Left team is 1, Right team is 2</p>
   <p><b>AdminRemovePlayerFromSquad <i>[PlayerName]</i>:</b> Removes the specified player from their squad.</p>
   <p><b>AdminForceTeamChange <i>[NameOrSteamId]</i>:</b> Forces the specified player to the opposite team.</p>
   <p><b>AdminKick <i>[NameOrSteamId] [KickReason]</i>:</b> Kicks a player with a reason.</p> 
