--- a/serveradmin.html
+++ b/serveradmin.html
@@ -58,8 +58,8 @@ body, html {
   <h3><b><u>Hotkeys:</u></b></h3>
   <p><b>' :</b> Opens the server console.</p>
   <p><b>SHIFT + P:</b> Enables AdminCam.</p>
-  <p><b>1 (and then scroll wheel):</b> Changes your speed while in AdminCam.</p>
-  <p><b>2 (and then scroll wheel):</b> Zoom in and out while in AdminCam.</p>
+  <p><b>1 + scroll wheel:</b> Changes your speed while in AdminCam.</p>
+  <p><b>2 + scroll wheel:</b> Zoom in and out while in AdminCam.</p>
   <p><b>6 :</b> Display the capture zones around each objective in the map while in AdminCam. </p>
   <p><b>9 :</b> Display the player nametags in the map while in AdminCam. </p>
   <p><b>0 :</b> Display the Admin HUD (located in top-left of screen) while in AdminCam. </p><br>
