--- a/serveradmin.html
+++ b/serveradmin.html
@@ -56,7 +56,7 @@ body, html {
   <h2><b><u>Useful Server Commands:</u></b></h2>
 
   <h3><b><u>Hotkeys:</u></b></h3>
-  <p><b>' :</b> Opens the server console.</p>
+  <p><b>' (tilde):</b> Opens the server console.</p>
   <p><b>SHIFT + P:</b> Enables AdminCam.</p>
   <p><b>1 + scroll wheel:</b> Changes your speed while in AdminCam.</p>
   <p><b>2 + scroll wheel:</b> Zoom in and out while in AdminCam.</p>
