--- a/gallery.html
+++ b/gallery.html
@@ -246,6 +246,9 @@ function showThumbnails() {
   <div class="mySlides"><div class="numbertext">18</div><img src="https://join1id.s3.amazonaws.com/20210625023748_1.jpg" style="width:100%"></div>
   <div class="mySlides"><div class="numbertext">19</div><img src="https://join1id.s3.amazonaws.com/20210802021327_1.jpg" style="width:100%"></div>
   <div class="mySlides"><div class="numbertext">20</div><img src="https://join1id.s3.amazonaws.com/20210827194047_1.jpg" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">21</div><img src="https://join1id.s3.amazonaws.com/2021-06-23_15.png" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">22</div><img src="https://join1id.s3.amazonaws.com/2021-08-30.png" style="width:100%"></div>
+  <div class="mySlides"><div class="numbertext">23</div><img src="https://join1id.s3.amazonaws.com/2021-09-02.png" style="width:100%"></div>
 
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -278,6 +281,9 @@ function showThumbnails() {
     <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210625023748_1.jpg" style="width:100%" onclick="currentSlide(18)" alt=""></div>
     <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210802021327_1.jpg" style="width:100%" onclick="currentSlide(19)" alt=""></div>
     <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/20210827194047_1.jpg" style="width:100%" onclick="currentSlide(20)" alt=""></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/2021-06-23_15.png" style="width:100%" onclick="currentSlide(21)" alt="Submitted by Mikey"></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/2021-08-30.png" style="width:100%" onclick="currentSlide(22)" alt="Submitted by Mikey"></div>
+    <div class="column myThumbnails"><img class="tb-opacity cursor" src="https://join1id.s3.amazonaws.com/2021-09-02.png" style="width:100%" onclick="currentSlide(23)" alt="Submitted by Mikey"></div>
   </div>
   <a class="tb-prev" onclick="plusThumbnails(-5)">&#10094;</a>
   <a class="tb-next" onclick="plusThumbnails(5)">&#10095;</a>
