--- a/gallery.html
+++ b/gallery.html
@@ -287,6 +287,8 @@ function showThumbnails() {
   </div>
   <a class="tb-prev" onclick="plusThumbnails(-5)">&#10094;</a>
   <a class="tb-next" onclick="plusThumbnails(5)">&#10095;</a>
+
+  <div>Note: This gallery page is still a bit buggy. Sorry for the inconvenience as it's fixed.</div>
 </div>
 
 
