--- a/gallery.html
+++ b/gallery.html
@@ -214,6 +214,7 @@ function showThumbnails() {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="index.html" class="w3-bar-item w3-button hover">HOME</a>
+      <a href="calendar.html" class="w3-bar-item w3-button hover">CALENDAR</a>
       <a href="gallery.html" class="w3-bar-item w3-button hover"></i>GALLERY</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -294,6 +295,33 @@ function showThumbnails() {
 
 <script>
 showSlides(slideIndex);
+
+// Change style of navbar on scroll
+window.onscroll = function() {myFunction()};
+function myFunction() {
+    var navbar = document.getElementById("myNavbar");
+    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-black";
+    } else {
+        navbar.className = navbar.className.replace(" w3-card w3-animate-top  w3-black", "");
+    }
+}
+
+// Toggle between showing and hiding the sidebar when clicking the menu icon
+var mySidebar = document.getElementById("mySidebar");
+
+function w3_open() {
+  if (mySidebar.style.display === 'block') {
+    mySidebar.style.display = 'none';
+  } else {
+    mySidebar.style.display = 'block';
+  }
+}
+
+// Close the sidebar with the close button
+function w3_close() {
+    mySidebar.style.display = "none";
+}
 </script>
 
 <!-- Footer -->
