--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#home" class="w3-bar-item w3-button hover">HOME</a>
+      <a href="calendar.html" class="w3-bar-item w3-button hover">CALENDAR</a>
       <a href="gallery.html" class="w3-bar-item w3-button hover"></i>GALLERY</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -205,7 +206,7 @@ function w3_close() {
     mySidebar.style.display = "none";
 }
 </script>
-</script>
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
