--- a/roster.html
+++ b/roster.html
@@ -53,7 +53,7 @@ body, html {
 <!-- Container for the Calendar -->
 <div class="container">
   <div class="w3-center">
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT1hVVBGoSMUKm8pDcrlNX9ydjAjlXmJBI4FYiMjUcinvmgafms2reNi694tW34ac69s9BLeL-e4Com/pubhtml" style="border-width:0" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
+    <h2>A roster will be posted here soon - it is currently being remade!</h2>
   </div>
 </div>
 
