Adding Roster to Navbar

--- a/gallery.html
+++ b/gallery.html
@@ -214,6 +214,7 @@ function showThumbnails() {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="index.html" class="w3-bar-item w3-button hover">HOME</a>
+      <a href="roster.html" class="w3-bar-item w3-button hover">ROSTER</a>
       <a href="calendar.html" class="w3-bar-item w3-button hover">CALENDAR</a>
       <a href="gallery.html" class="w3-bar-item w3-button hover"></i>GALLERY</a>
     </div>
