--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#home" class="w3-bar-item w3-button hover">HOME</a>
+      <a href="roster.html" class="w3-bar-item w3-button hover">ROSTER</a>
       <a href="calendar.html" class="w3-bar-item w3-button hover">CALENDAR</a>
       <a href="gallery.html" class="w3-bar-item w3-button hover"></i>GALLERY</a>
     </div>
