Updating roster link and server admin info

--- a/serveradmin.html
+++ b/serveradmin.html
@@ -90,7 +90,7 @@ body, html {
   <p><b>AdminRemovePlayerFromSquad <i>[PlayerName]</i>:</b> Removes the specified player from their squad.</p>
   <p><b>AdminForceTeamChange <i>[NameOrSteamId]</i>:</b> Forces the specified player to the opposite team.</p>
   <p><b>AdminKick <i>[NameOrSteamId] [KickReason]</i>:</b> Kicks a player with a reason.</p> 
-  <p><b>AdminBan <i>[NameOrSteamId] [BanLength] [BanReason]</i>:</b> Bans a player for a specified time length with a reason.</p>  
+  <p><b>AdminBan <i>[NameOrSteamId] [BanLength] [BanReason]</i>:</b> Bans a player for a specified time length with a reason. 0 = Perm, 1d = 1 Day, 1M = 1 Month. <b>Example :</b> Adminban Hodor 7d Attacking main base</p>   
   <p><b>AdminTeleportToPlayer <i>[PlayerName]</i>:</b> Teleports to the specified player.</p>  
 
   <h3><b><u>Deployable Commands:</u></b></h3>
