--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#home" class="w3-bar-item w3-button hover">HOME</a>
-      <a href="roster.html" class="w3-bar-item w3-button hover">ROSTER</a>
-      <a href="calendar.html" class="w3-bar-item w3-button hover">CALENDAR</a>
-      <a href="gallery.html" class="w3-bar-item w3-button hover"></i>GALLERY</a>
+      <!-- <a href="roster.html" class="w3-bar-item w3-button hover">ROSTER</a> -->
+      <!-- <a href="calendar.html" class="w3-bar-item w3-button hover">CALENDAR</a> -->
+      <!-- <a href="gallery.html" class="w3-bar-item w3-button hover"></i>GALLERY</a> -->
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
